--- a/python_notes.ipynb
+++ b/python_notes.ipynb
@@ -387,6 +387,66 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  n=0\n",
+        "  res=100/n\n",
+        "except ZeroDivisionError:\n",
+        "  print(\"Can't be divided by zero!\")\n",
+        "else:\n",
+        "  print(res)\n",
+        "finally:\n",
+        "  print(\"This is always executed\")"
+      ],
+      "metadata": {
+        "id": "SaxNtL5ogQaY",
+        "outputId": "d4b81e3a-eaa3-4d6d-cc8a-3fb50939a620",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Can't be divided by zero!\n",
+            "This is always executed\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"geek.txt\", \"w\") as file:\n",
+        "    file.write(\"Hello, Python!\\n\")\n",
+        "    file.write(\"File handling is easy with Python.\")\n",
+        "\n",
+        "print(\"File written successfully\")"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "t_4lJXJRheVn",
+        "outputId": "08fb3187-128b-4c8d-c709-65031b1fe56d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File written successfully\n"
+          ]
+        }
+      ]
     }
   ]
 }
